--- a/openshift.yaml
+++ b/openshift.yaml
@@ -124,7 +124,7 @@ objects:
         - name: "DROOLS_PROJECT"
           value: ${DROOLS_PROJECT}
         - name: "DEP_KIE_API_VERSION"
-          value: "6.4.0.Final" ## hardcoded...
+          value: "6.5.0.Final-redhat-2" ## TODO: add dep should detect this automatically...
         - name: "GIT_USERNAME"
           valueFrom:
             secretKeyRef:
@@ -150,14 +150,14 @@ objects:
         kind: ImageStreamTag
         name: ${APPLICATION_NAME}:latest
     source:
+      contextDir: "${DROOLS_PROJECT}"
       images:
       - from:
           kind: ImageStreamTag
           name: "${APPLICATION_NAME}-import:latest"
         paths:
-        - sourcePath: "/import/${DROOLS_PROJECT}"
+        - sourcePath: "/import/${DROOLS_GIT_REPO}"
           destinationDir: "."
-      contextDir: ""
     strategy:
       sourceStrategy:
         env:
